<resources>
    <string name="app_name">multimedia tool</string>
    <string name="error_gif">The length and width shall not be less than %1$dpx, and the size shall not exceed %2$sM</string>
    <string name="up_upload_is_customizable">Upload is customizable</string>
    <string name="submit_upload">Submit Upload</string>
    <string name="global_configuration">Global configuration</string>
    <string name="global_function">Global function</string>
    <string name="support_all">Support all</string>
    <string name="support_image">Support image</string>
    <string name="support_gif">Support gif</string>
    <string name="support_video">Support video</string>
    <string name="resolution_scale">resolution、scale</string>
    <string name="resolution_scale_default">The default setting is the closest to the resolution of 1920*1080, and the scale is the closest</string>
    <string name="resolution_scale_hd">Customize the maximum HD resolution with a ratio of 16:9</string>
    <string name="use_the_default_time_watermark">1. Use the default time watermark</string>
    <string name="custom_watermarks_all">2. Custom watermark (preview, video, image supported.) will override the default time watermark)</string>
    <string name="custom_watermarks_video">3. Custom watermark (support preview, video.) The default time watermark is overridden. It is recommended to use it only when modifying the high-definition recording, and in other cases, use the 1st and 2nd watermark methods above)</string>
    <string name="custom_hd_watermarks">4. Custom image watermark (it is recommended to use it only when modifying the high-definition recording, otherwise you can use the above watermark method)</string>
    <string name="custom_no_watermarks">5. Do not use watermarks (it may cause significant lag on devices with low specifications, such as those running Android 6 or similar legacy systems).</string>
    <string name="start_flash_memory_model">Enable flash memory mode</string>
    <string name="volume_button_trigger_photo_taking">Volume button trigger photo taking (customizable key trigger)</string>
    <string name="flash_settings">Click to change the default mode of the flash：</string>
    <string name="flash_off">FLASH OFF</string>
    <string name="flash_on">FLASH ON</string>
    <string name="flash_auto">FLASH AUTO</string>
    <string name="start_the_animation">Start the splash screen animation, which animates from bottom to top.</string>
    <string name="toggle_english">toggle english</string>
    <string name="edit_the_picture_and_add_it_to_the_album">Edit the image on the preview screen and add it to the album</string>
    <string name="support_for_editing_images">Support for editing images</string>
    <string name="support_compression_images">Support compression images</string>
    <string name="support_compression_videos">Support compression videos</string>
    <string name="save_all_file_paths">Save all file paths</string>
    <string name="save_the_image_path">Save the image path</string>
    <string name="save_the_path_to_the_video_file">Save the path to the video file</string>
    <string name="save_the_path_to_the_audio_file">Save the path to the audio file</string>
    <string name="you_can_set_up_to_a_few_images_video_audio_if_set_to_0_the_total_is_the_sum_of_the_following_three_configurations">
        When the number of images, videos, and audio is specified, the rendering total is the sum of them; otherwise, it is the value currently set</string>
    <string name="you_can_set_up_to_several_images">You can set up to several images:</string>
    <string name="you_can_set_up_to_several_audio_add_can_set_more_than_one_rendering_function_is_not_considered_more_than_one">You can set up to several audio :</string>
    <string name="horizontal_and_vertical_settings">Click to change vertical and horizontal Settings：</string>
    <string name="open_the_album_function">Open the album function</string>
    <string name="if_these_are_checked_the_album_functionality_is_based_on_the_following">If checked, the album functionality is based on the following:</string>
    <string name="if_the_selected_media_has_images_or_video_whether_both_can_be_selected">If the selected media has images or video, whether both can be selected</string>
    <string name="whether_to_display_only_one_media_type_if_the_media_selected_is_only_images_or_video">Whether to display only one media type if the media selected is only images or video</string>
    <string name="whether_to_display_the_number_of_multiple_selected_images">Whether to display the number of multiple selected images</string>
    <string name="enable_prompt_on_select_if_disabled">Enable the selected item\'s Enable function? If enabled, when the selection limit is reached, the Enable function of other items will be activated and they will become unselectable. If disabled, other items can still be clicked, but a prompt indicating unselectability will appear when attempting to select them.</string>
    <string name="nine_grid_size_DP">Nine-grid width(dp). If this value is not 0, the number of columns will be calculated based on this value.</string>
    <string name="nine_grid_span_count">Number of nine-grid columns. If the nine-grid width is set, this value will not take effect.</string>
    <string name="nine_grid_spacing">Nine-grid spacing (dp)</string>
    <string name="the_filter_width_should_be_no_less_than_px">Filter width no less than (px)</string>
    <string name="files_cannot_be_larger_than__m">Files cannot be larger than (M)</string>
    <string name="the_filter_height_shall_be_no_less_than_px">The filter height shall be no less than (px)</string>
    <string name="filter_image_scaling_up_to_1">Filter image scaling (up to 1)</string>
    <string name="whether_to_enable_the_original_image_option">Whether to enable the original image option</string>
    <string name="whether_to_start_the_album_list_slide_hide">Whether to start the album list slide hide top and bottom controls, slide up hide, slide down display</string>
    <string name="maximum_original_size_valid_only_if_original_enable_is_true_m">Maximum original size, valid only if originalEnable is true (M)</string>
    <string name="the_recording_configuration">The recording configuration</string>
    <string name="turn_on_the_shooting_function">Turn on the shooting function</string>
    <string name="click_to_start_recording_lose_the_click_to_take_photos_function">Click to start recording (lose the click to take photos function)</string>
    <string name="maximum_recording_time">Maximum recording time</string>
    <string name="minimum_recording_time_milliseconds">Minimum recording time (milliseconds),Cannot be lower than 1000</string>
    <string name="press_and_hold_for_the_specified_time_to_start_recording">press and hold for the specified time to start recording</string>
    <string name="enable_recording">Enable recording</string>
    <string name="simple_version">Simple version of</string>
    <string name="super_simple_version">Super simple</string>
    <string name="configure_version">Configure version</string>
    <string name="style_version">Style version</string>
    <string name="configure_upper_limit_version">This is flexible configuration can choose xx pictures,xx videos,xx audio usage</string>
    <string name="open_the_default_data_set">Open the default data set</string>
    <string name="open_the_default_data_set_local">Open the default data set - local</string>
    <string name="instant_preview">Instant preview</string>
    <string name="blue_style">Blue Style</string>
    <string name="black_style">Black Style</string>
    <string name="download_failed">Download failed</string>
    <string name="at_most_several_videos_can_be_set_multiple_videos_can_be_set_to_add_and_more_than_one_rendering_function_is_not_considered_for_the_moment">At most, several videos can be set  :</string>
    <string name="album_configuration">Photo album configuration</string>
    <string name="custom_filters">Custom filters:</string>
    <string name="recording_configuration">Recording configuration</string>
    <string name="recyclerView_version">recyclerView version</string>
    <string name="custom_cameraView">custom cameraView</string>
    <string name="custom_cameraLayout">custom camera layout</string>
    <string name="other_api">other api</string>
    <string name="obtain_the_cache_file_size">Obtain the cache file size </string>
    <string name="clear_the_cache_file_size">Clear the cache file size</string>
    <string name="str_see_set_value">set value</string>
    <string name="str_see_get_value">get value</string>
    <string name="str_see_reset_value">reset value</string>
    <string name="reboot">reboot</string>
    <string name="this_is_a_demonstration_of_how_to_customize_the_layout_and_logic_of_the_recording_interface">This is a demonstration of how to customize the layout and logic of the recording interface</string>
    <string name="its_simple_to_just_add_things_to_the_layout_and_modify_the_logic_by_oneself">It\'s simple to just add things to the layout and modify the logic by oneself</string>
    <string name="modify_the_logic_of_pictures_when_taking_photos">Modify the logic of pictures when taking photos</string>
    <string name="dynamic_watermark">Dynamic watermark</string>
    <string name="how_to_customize_a_small_layout">How to customize a small layout</string>
    <string name="this_is_a_demonstration_of_how_to_customize_some_parameters_of_camerax">This is a demonstration of how to customize some parameters of CameraX</string>
    <string name="clear">clear</string>
    <string name="limit_1">Total_limit(null) Image limit(2) Video limit(1) Audio limit(1)</string>
    <string name="limit_2">Total_limit(20) Image limit(null) Video limit(null) Audio limit(null)</string>
    <string name="limit_3">Total_limit(5) Image limit(null) Video limit(1) Audio limit(1)</string>
    <string name="limit_4">Total_limit(5) Image limit(3) Video limit(null) Audio limit(1)</string>
    <string name="limit_5">Total_limit(5) Image limit(3) Video limit(1) Audio limit(null)</string>
    <string name="limit_6">Total_limit(5) Image limit(3) Video limit(null) Audio limit(null)</string>
    <string name="limit_7">Total_limit(5) Image limit(null) Video limit(2) Audio limit(null) </string>
    <string name="limit_8">Total_limit(5) Image limit(null) Video limit(null) Audio limit(2)</string>
    <string name="use_recyclerview_to_fill_this_control_currently_it_only_demonstrates_the_fluency_of_the_example_and_the_demonstration_of_deleting_or_adding_data_for_data_update_is_not_written">Use RecyclerView to fill this control. Currently, it only demonstrates the fluency of the example, and the demonstration of deleting or adding data for data update is not written.</string>
    <string name="i_am_customized">I am customized.</string>
    <string name="i_am_customized_click_me">I am customized. Click me.</string>
</resources>