<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_is_a_demonstration_of_how_to_customize_the_layout_and_logic_of_the_recording_interface" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/its_simple_to_just_add_things_to_the_layout_and_modify_the_logic_by_oneself" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modify_the_logic_of_pictures_when_taking_photos" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dynamic_watermark" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_customize_a_small_layout" />

            </RadioGroup>

            <com.zhongjh.gridview.widget.GridView
                android:id="@+id/gridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:audioDeleteColor="@color/blue_primary"
                app:audioPlayColor="@color/blue_primary"
                app:audioProgressColor="@color/blue_primary"
                app:authority="com.zhongjh.demo.fileProvider"
                app:columnNumber="4"
                app:columnSpace="10"
                app:imageAddDrawable="@drawable/ic_add_gray"
                app:imageDeleteDrawable="@drawable/ic_deleted_yellow"
                app:imageEngine="com.zhongjh.demo.configuration.Glide4EngineProgress"
                app:maskingColor="?attr/colorPrimary"
                app:maskingTextColor="@color/black_eighty_percent"
                app:maskingTextContent="@string/up_upload_is_customizable"
                app:maskingTextSize="12"
                app:maxCount="7" />

        </LinearLayout>


    </ScrollView>
</layout>