<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.zhongjh.progresslibrary.widget.MaskProgressLayout
                android:id="@+id/mplImageList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:audioDeleteColor="@color/blue_primary"
                app:audioPlayColor="@color/blue_primary"
                app:audioProgressColor="@color/blue_primary"
                app:authority="com.zhongjh.cameraapp.fileprovider"
                app:imageAddDrawable="@drawable/ic_add_gray"
                app:imageDeleteDrawable="@drawable/ic_deleted_yellow"
                app:imageEngine="com.zhongjh.cameraapp.configuration.Glide4EngineProgress"
                app:maskingColor="?attr/colorPrimary"
                app:maskingTextColor="@color/black_eighty_percent"
                app:maskingTextContent="@string/up_upload_is_customizable"
                app:maskingTextSize="12"
                app:columnNumber="4"
                app:columnSpace="10"
                app:maxCount="7" />

            <CheckBox
                android:id="@+id/cbAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="true"
                android:text="@string/open_the_album_function" />

            <CheckBox
                android:id="@+id/cbCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:text="@string/turn_on_the_shooting_function" />

            <CheckBox
                android:id="@+id/cbRecorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:text="@string/enable_recording" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</layout>